# sementic_search_project

./: .env.example  .gitignore  enriched_permit_records.json  main.py  pyproject.toml  raw_data.json  readme.md  requirements.txt  test.ipynb
final_permits_chroma_storage/: chroma.sqlite3
